[project]
name = "promptoptimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andre Ratzenberger", email = "andre.ratzenberger@whiteduck.de" }
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "gymnasium>=1.1.1",
    "litellm>=1.72.0",
    "rich>=14.0.0",
    "scikit-learn>=1.6.1",
    "sentencepiece>=0.2.0",
    "stable-baselines3>=2.6.0",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
]

[project.scripts]
promptoptimizer = "promptoptimizer:cli.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/promptoptimizer"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
